--- a/wzup/Base.lproj/Main.storyboard
+++ b/wzup/Base.lproj/Main.storyboard
@@ -2291,10 +2291,10 @@
                                                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="width" constant="30" id="91Y-yS-OUW">
-                                                                        <variation key="heightClass=regular-widthClass=compact" constant="25"/>
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="20"/>
                                                                     </constraint>
                                                                     <constraint firstAttribute="height" constant="30" id="e0F-6x-sN9">
-                                                                        <variation key="heightClass=regular-widthClass=compact" constant="25"/>
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="20"/>
                                                                     </constraint>
                                                                 </constraints>
                                                                 <state key="normal" backgroundImage="search-icon.png">
@@ -2306,7 +2306,8 @@
                                                                         <exclude reference="e0F-6x-sN9"/>
                                                                     </mask>
                                                                 </variation>
-                                                                <variation key="heightClass=regular-widthClass=compact">
+                                                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                                    <rect key="frame" x="51" y="14" width="20" height="20"/>
                                                                     <mask key="constraints">
                                                                         <include reference="91Y-yS-OUW"/>
                                                                         <include reference="e0F-6x-sN9"/>
@@ -2320,7 +2321,9 @@
                                                         </subviews>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <constraints>
-                                                            <constraint firstItem="vyf-6O-Fgc" firstAttribute="top" secondItem="oOT-t3-gxe" secondAttribute="top" constant="25" id="A0R-9F-9q7"/>
+                                                            <constraint firstItem="vyf-6O-Fgc" firstAttribute="top" secondItem="oOT-t3-gxe" secondAttribute="top" constant="25" id="A0R-9F-9q7">
+                                                                <variation key="heightClass=regular-widthClass=compact" constant="18"/>
+                                                            </constraint>
                                                             <constraint firstItem="yXr-Fs-dHy" firstAttribute="centerX" secondItem="fHV-rp-XcT" secondAttribute="centerX" id="Dn7-GE-ygX"/>
                                                             <constraint firstItem="yXr-Fs-dHy" firstAttribute="top" secondItem="oOT-t3-gxe" secondAttribute="top" constant="8" id="HBp-y1-2pk">
                                                                 <variation key="heightClass=regular-widthClass=compact" constant="14"/>
@@ -4064,6 +4067,7 @@
                         <viewControllerLayoutGuide type="bottom" id="sdG-VS-XhD"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="C2t-xQ-cFD">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Ow-2T-djK">
@@ -4088,8 +4092,7 @@
                                                 <exclude reference="ouM-gZ-I7U"/>
                                             </mask>
                                         </variation>
-                                        <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="368" y="27" width="20" height="20"/>
+                                        <variation key="heightClass=regular-widthClass=compact">
                                             <mask key="constraints">
                                                 <include reference="86c-1O-Stx"/>
                                                 <include reference="ouM-gZ-I7U"/>
@@ -4104,9 +4107,6 @@
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
-                                        <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
-                                            <rect key="frame" x="14" y="24" width="346" height="23"/>
-                                        </variation>
                                     </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="0.13734292840000001" blue="0.1233993256" alpha="1" colorSpace="calibratedRGB"/>
